--- a/index.html
+++ b/index.html
@@ -597,3 +597,79 @@
             </div>
         </section>
     </article>
+    <footer>
+        <div class="footer-1 foot">
+            <h1>Get in touch</h1>
+            <div class="f1-content">
+                <ul>
+                    <li class="email">support@amrutam.co.in</li>
+                    <li class="phone">+91 9713171999</li>
+                    <li class="socials">
+                        <i class="fa-brands fa-square-facebook"></i>
+                        <i class="fa-brands fa-square-twitter"></i>
+                        <i class="fa-brands fa-square-instagram"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-square-pinterest"></i>
+                        <i class="fa-brands fa-square-youtube"></i>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-2 foot">
+            <h1>Categories</h1>
+            <div class="f1-content">
+                <ul>
+                    <li><a href="#">Shop All</a></li>
+                    <li><a href="#">Hair Care</a></li>
+                    <li><a href="#">Skin Care</a></li>
+                    <li><a href="#">Health Care</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-3 foot">
+            <h1>Information</h1>
+            <div class="f1-content">
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Terms and Conditions</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Shipping and Returns Policy</a></li>
+                    <li><a href="#">International Delivery</a></li>
+                    <li><a href="#">For Businesses, Hotels and Resorts</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-4 foot">
+            <h1>Quick Links</h1>
+            <div class="f1-content">
+                <ul>
+                    <li><a href="#">My Account</a></li>
+                    <li><a href="#">Track Your Order</a></li>
+                    <li><a href="#">Recycle Project</a></li>
+                    <li><a href="#">FAQs</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-5 foot">
+            <h1>Newsletter</h1>
+            <div class="f1-content">
+                <h2>Subscribe to our Newsletter and join Amrutam Family today!</h2>
+                <div class="subscribe">
+                    <input type="text" placeholder="your email here">
+                    <button>Subscribe</button>
+                </div>
+            </div>
+        </div>
+        <div class="footer-6 foot">
+            <h1>Download Amrutam Home App</h1>
+            <div class="f1-content">
+                <img src="https://cdn.shopify.com/s/files/1/0645/9650/8925/files/google-play-badge.png?v=1676873119&width=400"
+                    alt="google play">
+                <img src="https://cdn.shopify.com/s/files/1/0645/9650/8925/files/app-store-badge.png?v=1676873119&width=400"
+                    alt="Apple store">
+            </div>
+        </div>
+    </footer>
+</body>
+
+</html>
